# tacp_rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  policy.toml  policy.yaml  tacp.code-workspace
tacp/: Cargo.toml
tacp/src/: argvalpair.rs  lib.rs  obfuscation.rs  untested_safety_msg.txt
tacpd/: Cargo.toml
tacpd/src/: main.rs  policy.rs
tacpd/src/policy/: enforce.rs  parse.rs
tclient/: Cargo.toml
tclient/src/: main.rs  util.rs
test_client/: Cargo.toml
test_client/src/: main.rs  util.rs
testing/tclient/: Cargo.toml
testing/tclient/src/: main.rs  util.rs
testing/tserver/: Cargo.toml
testing/tserver/src/: main.rs  policy.rs
testing/tserver/src/policy/: enforce.rs  parse.rs
testing/ttest/: Cargo.toml
testing/ttest/src/: firstparty_integration.rs  ipc.rs  main.rs  pcap.rs
tserver/: Cargo.toml
tserver/src/: main.rs  policy.rs  testsupport.rs
tserver/src/policy/: parse.rs
ttest/: Cargo.toml  basicpolicy.yaml
ttest/pcaps/: werberblog.net_tacacs.pcap
ttest/src/: main.rs  pcap.rs  process.rs
