[workspace]
members = ["tacp", "testing/tserver", "testing/tclient", "testing/ttest"]
resolver = "2"

[workspace.package]
authors = ["Andrew Piroli"]
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 1

[profile.deboog]
inherits = "dev"
opt-level = 0

[profile.release]
lto = true
