[package]
name = "tacp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
md5 = { package = "md-5", version = "~0.10.6", default-features = false }
zerocopy = { version = "=0.8.17", default-features = false }
zerocopy-derive = { version = "=0.8.17", default-features = false }

[features]
dst-construct = []