[package]
name = "tacp"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = { version = "~2.10.0", default-features = false }
md5 = { package = "md-5", version = "~0.10.6", default-features = false, optional = true }
zerocopy = { version = "~0.8.27", default-features = false }
zerocopy-derive = { version = "~0.8.27", default-features = false }

[features]
default = ["obfuscation"]
obfuscation = ["dep:md5"]
dst-construct = []

[lints.clippy]
len_without_is_empty = "allow"
too_many_arguments = "allow"
doc_markdown = "allow"
pedantic = "warn"

# Fix these
must_use_candidate = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"