[package]
name = "tacp"
version = "0.0.0-beta0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bitflags = { version = "~2.11.1", default-features = false }
md5 = { package = "md-5", version = "~0.11.0", default-features = false, optional = true }
zerocopy = { version = "~0.8.48", default-features = false }
zerocopy-derive = { version = "~0.8.48", default-features = false }

[features]
default = ["obfuscation"]
obfuscation = ["dep:md5"]
expose_zerocopy = []

[lints.clippy]
len_without_is_empty = "allow"
too_many_arguments = "allow"
doc_markdown = "allow"
pedantic = "warn"
must_use_candidate = "allow"
nursery = "warn"
