[package]
name = "test_client"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tacp = { path = "../tacp", features = ["dst-construct"] }
hexdump = { version = "~0.1.1", default-features = false }
clap = { version = "^4.5.21", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "unicode"] }
rand = { version = "^0.9.0-beta.0", default-features = false, features = ["std", "std_rng", "os_rng"]}
rpassword = { version = "~7.3.1", default-features = false }
anyhow = { version = "~1.0.94", default-features = false, features = ["std"] }
