[package]
name = "tclient"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tacp = { path = "../../tacp", features = ["obfuscation"] }
hexdump = { version = "~0.1.2", default-features = false }
clap = { version = "^4.6.1", default-features = false, features = ["std", "color", "help", "usage", "error-context", "suggestions", "derive", "env", "unicode"] }
rand = { version = "^0.10.1", default-features = false, features = ["std", "std_rng", "sys_rng"]}
rpassword = { version = "~7.5.2", default-features = false }
anyhow = { version = "~1.0.102", default-features = false, features = ["std"] }
