[package]
name = "tserver"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tacp = { path = "../../tacp" }
tokio = { version = "~1.44.2", default-features = false, features = ["net", "rt", "io-util", "fs"] }
hexdump = { version = "~0.1.2", default-features = false }
smallvec = { version = "~1.15.0", default-features = false, features = ["write", "union"] }
fnv = { version = "~1.0.7", default-features = false, features = ["std"] }
yaml = { package = "strict-yaml-rust", version = "~0.1.2", default-features = false }
tracing = { version = "~0.1.41", default-features = false, features = ["attributes", "std", "tracing-attributes", "release_max_level_info"] }
tracing-subscriber = { version = "~0.3.19", default-features = false, features = ["alloc", "ansi", "fmt", "nu-ansi-term", "registry", "sharded-slab", "smallvec", "std", "thread_local", "env-filter"] }
regex = { version = "~1.11.1", default-features = false, features = ["std", "perf", "unicode"] }
syslog_fmt = { version = "~0.3.2", default-features = false, features = ["chrono"] }
zerocopy = { version = "~0.8.25", default-features = false }
reqwest = { version = "~0.12.15", default-features = false, features = ["blocking"] }
